labs/9.5/client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dns-client
  namespace: training
  labels:
    app: dns-client
spec:
  containers:
    - name: busybox
      image: busybox:1.36
      command: ["sleep", "3600"]
